Check USE(APPLE_INTERNAL_SDK) instead of specific headers when importing from WebKitAdditions https://bugs.webkit.org/show_bug.cgi?id=167555

Reviewed by Dan Bernstein.

Instead of guarding #import <WebKitAdditions/*> on the existence of the imported file, consult
USE(APPLE_INTERNAL_SDK) instead.

Source/WebCore:

* page/ios/EventHandlerIOS.mm:
* platform/ios/DragImageIOS.mm:
* platform/ios/PasteboardIOS.mm:
* platform/mac/DragDataMac.mm:

Source/WebKit2:

* UIProcess/Cocoa/WebPageProxyCocoa.mm:
* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
* WebProcess/WebCoreSupport/mac/WebDragClientMac.mm:

Source/WTF:

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/184586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211342 268f45cc-cd09-0410-ab3c-d52691b4dbfc