Source/WTF/wtf/Platform.h
@@ -669,7 +669,7 @@
 /* Include feature macros */
 #include <wtf/FeatureDefines.h>
 
-#if defined(__has_include) && __has_include(<WebKitAdditions/AdditionalFeatureDefines.h>)
+#if USE(APPLE_INTERNAL_SDK)
 #include <WebKitAdditions/AdditionalFeatureDefines.h>
 #endif
 
